welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:23: error: not found: value YELLOW
	faireV(YELLOW)
               ^