welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	def faireV(c:Color){
		setCouleurBrosse(c)
		avance()
		baisseBrosse()
		leveBrosse()
		gauche()
		avance()
		droite()
		avance()
		baisseBrosse()
		leveBrosse()
		avance()
		droite()
		avance()
		baisseBrosse()
		leveBrosse()
		droite()
		avance()
		gauche()
	}
	faireV(YELLOW)
}
